<resources>
    <string name="app_name">Cedup20181</string>
    <string name="mensagemHelloWorld">Hello World!</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="logar">Logar</string>
    <string name="mensagemLoginSucesso">Login realizado com sucesso!</string>
    <string name="mensagemLoginErro">Usuario ou senha invalido!</string>
    <string name="seja_bem_vindo">Seja bem vindo</string>
    <string name="dialogo_mensagem">Dialogo Mensagem</string>
    <string name="confirmacao_exclusao">Confirmacao de exclusao</string>
    <string name="mensagem_confirmacao_exclusao">Deseja realmente excluir?</string>
    <string name="dialogo_lista">Dialogo Lista</string>
    <string name="selecione_estado">Selecione um estado</string>


    <array name="lista_estados">
        <item>PR - Parana</item>
        <item>SC - Santa Catarina</item>
        <item>RS - Rio Grande do Sul</item>
    </array>
    <string name="title_activity_menu_lateral">MenuLateralActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
