<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.cedup.cedup20181.BemVindoActivity">

    <TextView
        android:id="@+id/mensagemBemVindo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/seja_bem_vindo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dialogo_mensagem"
        android:onClick="abrirDialogoMensagem"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dialogo_lista"
        android:onClick="abrirDialogoLista"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Produtos"
        android:onClick="abrirCadastroProduto"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tela com Tab"
        android:onClick="abrirTelaComTab"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tela com Menu Lateral"
        android:onClick="abrirTelaComMenuLateral"/>

</LinearLayout>
